--- a/src/components/GainAdder/GainAdder.module.css
+++ b/src/components/GainAdder/GainAdder.module.css
@@ -1,19 +1,18 @@
 .newGainButton{
-    width: 100px;
-    height: 100px;
-    font-size: 64px;
-    border-radius: 50%;
+
+    font-size: 32px;
     border-style: solid;
-    background-color: lightgrey;
+    border-color: black;
+    background-color: white;
+
 }
 
 .newGainButton:hover{
-    width: 100px;
-    height: 100px;
-    font-size: 64px;
-    border-radius: 50%;
+
+    font-size: 32px;
     border-style: solid;
-    background-color: white;
+    color: grey;
+
 }
 
 .stickBottomRight{
