--- a/src/components/GainCard/GainCard.module.css
+++ b/src/components/GainCard/GainCard.module.css
@@ -10,41 +10,30 @@
 .card {
   opacity: 100%;
   display: flex;
-  border-radius: inherit;
-  border-width: 2px;
-  border-style: hidden;
-  border-radius: 16px 0px;
+  border: solid;
 
   padding: 8px;
   margin: 4px;
-  background-image: black;
   font-size: xx-large;
   overflow: hidden;
   white-space: nowrap;
 
-  background-image: linear-gradient(to right, red, orange);
 }
 
 .cardDone {
   opacity: 25%;
   display: flex;
-  border-radius: inherit;
-  border-width: 2px;
-  border-style: hidden;
-  border-radius: 16px 0px;
+  border: solid;
 
   padding: 8px;
   margin: 4px;
-  background-image: black;
   font-size: xx-large;
   overflow: hidden;
   white-space: nowrap;
 
-  background-image: linear-gradient(to right, red, orange);
 }
 
 .counter {
-  border-radius: 10px 0px 10px 0px;
   font-size: inherit;
   border-style: none;
   color: white;
