--- a/src/pages/AllGains/AllGains.module.css
+++ b/src/pages/AllGains/AllGains.module.css
@@ -1,7 +1,5 @@
 .container {
     margin: 8px 8px 0px 8px;
-    background-color: black;
-    border-radius: 32px 0px  ;
-    color:white;
+    border-color: black;
 }
 
